# cyberdesk

./: .gitignore  CLAUDE.md  Cargo.toml  NOTICE  README.md  build.rs
assets/: cyberdesk.rgba
docs/: cyberdesk-architecture.md  cyberdesk-decisions.md  cyberdesk-degoogle-audit.md  cyberdesk-feature-backlog.md  cyberdesk-roadmap.txt  cyberdesk-security.md  cyberdesk-wire-format.md
docs/updates/: README.md
scripts/: fetch-cef.ps1  harden-selftest.mjs  make-icon.py  no-emdash.mjs
src/: app.rs  appearance.rs  blit.wgsl  browser.rs  command.css  command.html  command.js  deepfield.wgsl  degoogle.rs  drag.wgsl  forensic.rs  fsprobe.rs  gear.wgsl  harden.rs  hardening.js  hud.css  hud.html  hud.js  info.css  info.html  info.js  info_glyph.wgsl  loading.wgsl  lock.css  lock.html  lock.js  logging.rs  main.rs  memory.rs  mfzone.css  mfzone.html  mfzone.js  onion.css  onion.html  onion.js  page.wgsl  pulsegrid.rs  pulsegrid_composite.wgsl  pulsegrid_lattice.wgsl  pulsegrid_sprite.wgsl  (+20 more)
