[package]
name = "cyberdesk"
version = "0.1.0"
edition = "2024"
description = "CARVILON CyberDesk — desktop shell (Rust host + CEF)"
authors = ["Sascha Daemgen IT and More Systems"]
license-file = "LICENSE"
publish = false

[[bin]]
name = "cyberdesk"
path = "src/main.rs"

[dependencies]
winit = "0.30"
wgpu = "30"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
# CEF binding — exact pin (see docs/cyberdesk-decisions.md, D-0002).
# default-features = false disables the Windows sandbox feature (no_sandbox);
# see D-0008 for the tracked deviation from the "sandbox stays active" doctrine.
cef = { version = "=149.3.0", default-features = false }
# App state store (schema-versioned key/value settings) and theme tokens.
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
# Update-awareness HTTPS client (CD-13, D-0023) — the host's ONE intentional
# outbound connection, a single pinned manifest. rustls-based (no OpenSSL); the
# reasoned exception to the lean-dependency doctrine is recorded in D-0023.
ureq = { version = "2", default-features = false, features = ["tls"] }
# Embedded Tor engine (CD-15, D-0026) — pure-Rust Tor via arti-client, rustls
# (no OpenSSL), on a background tokio runtime. Heavy but justified by the
# per-window Tor feature; the reasoned dependency exception is recorded in D-0026.
# `compression` is a DEFAULT arti-client feature and is REQUIRED for bootstrap: Tor
# directory caches serve the consensus compressed (zstd/lzma/zlib), and without it
# arti cannot inflate the response — the fetch silently stalls at 15% (D-0033). Do
# NOT drop it. (Needs a C toolchain for the zstd/xz codecs — MSVC, already present
# for CEF.)
arti-client = { version = "0.43", default-features = false, features = ["tokio", "rustls", "compression"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "net", "io-util", "sync", "time"] }
# File logging (CD-15 HOTFIX): a windowed app has no visible stderr. `tracing` is
# chosen over `log`+fern because arti/tokio already emit `tracing` events, so one
# subscriber captures BOTH our lifecycle logs AND arti's internal bootstrap/dirmgr
# progress — the exact diagnostic the Tor stall needs. General infra, not Tor-only.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
# Bridges arti's futures-based DataStream to tokio's AsyncRead/Write for the SOCKS relay.
tokio-util = { version = "0.7", default-features = false, features = ["compat"] }
# Names arti's PreferredRuntime (already in the tree via arti-client) for the client type.
tor-rtcompat = { version = "0.43", default-features = false, features = ["tokio", "rustls"] }
# `StreamExt` to consume arti's bootstrap-status Stream (deep bootstrap instrumentation,
# CD-15 HOTFIX 2). Already in the tree transitively via arti.
futures = { version = "0.3", default-features = false, features = ["std"] }

[profile.release]
opt-level = 3
